--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,4 @@
-{
+    {
   "name": "interview-platform",
   "private": true,
   "version": "0.0.0",
@@ -12,7 +12,8 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.59.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "skill-screen": "file:.."
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
