--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@clerk/clerk-react": "^5.59.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "skill-screen": "file:.."
+    "skill-screen": "file:..",
+    "vite": "^7.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -23,7 +24,6 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "globals": "^16.5.0"
   }
 }
