--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,4 @@
-    {
+{
   "name": "interview-platform",
   "private": true,
   "version": "0.0.0",
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.59.2",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.18",
+    "@vitejs/plugin-react": "^5.1.1",
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-router": "^7.12.0",
     "skill-screen": "file:..",
-    "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^5.1.1"
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "daisyui": "^5.5.14",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
