--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.59.2",
+    "@monaco-editor/react": "^4.7.0",
+    "@stream-io/video-react-sdk": "^1.31.3",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.18",
     "@vitejs/plugin-react": "^5.1.1",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^4.4.1",
     "react-router": "^7.12.0",
     "skill-screen": "file:..",
+    "stream-chat": "^9.28.0",
+    "stream-chat-react": "^13.13.3",
     "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
   },
