--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,24 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.59.2",
+    "@clerk/clerk-react": "^5.53.3",
     "@monaco-editor/react": "^4.7.0",
-    "@stream-io/video-react-sdk": "^1.31.3",
-    "@tailwindcss/vite": "^4.1.18",
-    "@tanstack/react-query": "^5.90.18",
-    "@vitejs/plugin-react": "^5.1.1",
-    "axios": "^1.13.2",
-    "canvas-confetti": "^1.9.4",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "@stream-io/video-react-sdk": "^1.24.0",
+    "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/react-query": "^5.90.5",
+    "axios": "^1.12.2",
+    "canvas-confetti": "^1.9.3",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.548.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
-    "react-resizable-panels": "^4.4.1",
-    "react-router": "^7.12.0",
-    "skill-screen": "file:..",
-    "stream-chat": "^9.28.0",
-    "stream-chat-react": "^13.13.3",
-    "tailwindcss": "^4.1.18",
-    "vite": "^7.2.4"
+    "react-resizable-panels": "^3.0.6",
+    "react-router": "^7.9.4",
+    "stream-chat": "^9.23.0",
+    "stream-chat-react": "^13.9.0",
+    "tailwindcss": "^4.1.14",
+    "@vitejs/plugin-react": "^5.1.1",
+    "vite": "^7.2.4",
+    "skill-screen": "file:.."
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
