--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,13 +29,13 @@
     "tailwindcss": "^4.1.14",
     "@vitejs/plugin-react": "^5.0.3",
     "vite": "^7.1.7",
-    "skill-screen": "file:.."
+    "skill-screen": "file:..",
+    "daisyui": "^5.3.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "daisyui": "^5.3.10",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
